# msc-math-thesis

./: .gitignore  AGENTS.md  Makefile  README.md  pnpm-lock.yaml  pnpm-workspace.yaml  project-1-turing-machines-and-dynamical-systems.md  project-2-viterbo-conjecture.md  project-3-rourke-et-al-2003.md  project-4-math-agent.md
.devcontainer/codespaces/: devcontainer.json  post-create.sh  post-start.sh
.devcontainer/codex/: post-create.sh  post-start.sh
.devcontainer/local/: devcontainer.json  post-create.sh  post-start.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  task.md
.github/workflows/: lint-typecheck.yml  test.yml
circular-partitions-julia/: AGENTS.md  Project.toml  README.md
circular-partitions-julia/src/: CircularPartitions.jl
circular-partitions-julia/test/: runtests.jl
math-agent/backend/: AGENTS.md  README.md  pyproject.toml  pyrightconfig.json  ruff.toml
math-agent/backend/runner/: __init__.py  cli.py  core.py
math-agent/backend/tests/: test_runner.py
math-agent/frontend/: .eslintrc.cjs  AGENTS.md  README.md  index.html  package.json  vite.config.ts
math-agent/frontend/.storybook/: main.ts  preview.ts
math-agent/frontend/src/: App.test.tsx  App.tsx  index.css
scripts/: doctor.sh
turing-dynamics-julia/: AGENTS.md  Project.toml  README.md
turing-dynamics-julia/src/: TuringDynamics.jl
turing-dynamics-julia/test/: runtests.jl
viterbo-conjecture-julia/: AGENTS.md  Project.toml  README.md
viterbo-conjecture-julia/src/: ViterboConjecture.jl
viterbo-conjecture-julia/test/: runtests.jl
(+17 files in other folders)
