[project]
name = "math-agent-runner"
version = "0.1.0"
description = "Dummy job runner for Codex CLI workflows"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
math-agent-runner = "runner.cli:main"

[tool.uv]
dev-dependencies = [
  "pytest>=7.4,<9",
  "ruff>=0.5,<1",
  "pyright>=1.1.370,<2",
]
package = true

[build-system]
requires = ["hatchling>=1.20"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["runner"]
